<resources>
    <string name="app_name">Korean Dining Advisor</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_insert">Create</string>
    <string name="action_account">Account</string>
    <string name="title_activity_detail">Detail</string>
    <string name="mealPhotoDesc">Meal Photo</string>
    <string name="action_add_meal">Add Meal</string>
    <string name="title_activity_insert_meal">Insert Meal</string>
    <string name="search_meal_description">Search Meal</string>
    <string name="meal_photo_description">Meal Photo</string>
    <string name="insert_image">Choose photo</string>
    <string name="korean_title">Korean Title</string>
    <string name="english_title">English Title</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="transliteration">Transliteration</string>
    <string name="rating">Rating</string>
    <string name="spiciness">Spiciness</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
    <string name="addIngredient">Add ingredient</string>
    <string name="unknown">Unknown</string>
    <string name="generateTransliteration">Generate transliteration</string>
    <string name="generateTranslation">Generate translation</string>
    <string name="noAccount">Do not have an account yet? You can sign up for free</string>
    <string name="clearIngredients">Clear all</string>

    <string-array name="spiciness_levels">
        <item></item>
        <item>0 - not spicy</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5 - spicy as hell!!!</item>
    </string-array>
</resources>
